--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.6.0",
+    "@vue/compiler-sfc": "^3.2.47",
     "nuxt": "^3.3.1"
+  },
+  "dependencies": {
+    "@iconify-json/mdi": "^1.1.50",
+    "@iconify/vue": "^4.1.0",
+    "unplugin-icons": "^0.15.3",
+    "unplugin-icons-nuxt3": "^1.0.0"
   }
 }
