--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/mdi": "^1.1.50",
     "@iconify/vue": "^4.1.0",
     "@pinia/nuxt": "^0.4.7",
+    "axios": "^1.3.4",
     "pinia": "^2.0.33",
     "portal-vue": "^3.0.0",
     "unplugin-icons": "^0.15.3",
